cabal-version:      3.0
name:               fundeps
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Jan Hrček
maintainer:         honza.hrk@gmail.com
author:             Jan Hrček
tested-with:        ghc ==8.8.4
homepage:           https://github.com/jhrcek/fundeps#readme
synopsis:
    An experimental CLI tool for visualization of elm declaration dependencies.

description:
    An experimental CLI tool which parses source files in an elm projects and offers
    REPL-like UI for displaying declaration dependency graphs using graphviz library.

category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: git@github.com/jhrcek/fundeps.git

library
    exposed-modules:
        Data.Declaration
        FunDeps
        Terminal.Commands

    hs-source-dirs:   src
    other-modules:
        FunDeps.Server
        Settings
        Settings.Editor
        Terminal
        Terminal.Ansi

    default-language: Haskell2010
    ghc-options:      -Wall -fwrite-ide-info -hiedir=hie
    build-depends:
        base >=4.7 && <5,
        aeson,
        brick,
        bytestring,
        containers,
        fgl,
        file-embed,
        foldl,
        graphviz,
        haskeline,
        http-media,
        lucid,
        microlens,
        microlens-th,
        parsec,
        servant,
        servant-lucid,
        servant-server,
        text,
        transformers,
        turtle,
        vector,
        vty,
        wai,
        warp

executable fundeps
    main-is:          Main.hs
    hs-source-dirs:   fundeps
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base >=4.7 && <5,
        fundeps,
        turtle

executable fundeps-hs
    main-is:          Main.hs
    hs-source-dirs:   fundeps-hs
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base >=4.7 && <5,
        fundeps

test-suite fundeps-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    Terminal.CommandsSpec
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        fundeps,
        graphviz,
        hspec,
        hspec-expectations
