cabal-version:      3.0
name:               fundeps
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Jan Hrček
maintainer:         honza.hrk@gmail.com
author:             Jan Hrček
homepage:           https://github.com/jhrcek/fundeps#readme
synopsis:
  An experimental CLI tool for visualization of elm declaration dependencies.

description:
  An experimental CLI tool which parses source files in an elm projects and offers
  REPL-like UI for displaying declaration dependency graphs using graphviz library.

category:           Web
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==9.6.4

source-repository head
  type:     git
  location: git@github.com/jhrcek/fundeps.git

flag WithJS
  description: Embed main.js file when building
  default:     False
  manual:      True

common common-options
  build-depends:    base >=4.7 && <5
  default-language: GHC2021
  ghc-options:
    -fwrite-ide-info -hiedir=hie -Wall -Wcompat -Widentities
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wmissing-export-lists
    -Wno-unrecognised-pragmas -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

library
  import:          common-options

  if flag(withjs)
    cpp-options: -DWithJS

  exposed-modules:
    Data.Declaration
    FunDeps
    TUI.Commands

  hs-source-dirs:  src
  other-modules:
    Data.DepGraph
    FunDeps.Graphviz
    FunDeps.Server
    Settings
    TUI
    TUI.Ansi
    TUI.Select
    TUI.Settings.Editor

  if flag(withjs)
    build-depends: file-embed

  build-depends:
    , aeson
    , base            >=4.7 && <5
    , brick
    , bytestring
    , containers
    , fgl
    , foldl
    , graphviz
    , haskeline
    , http-media
    , lucid
    , microlens
    , microlens-mtl
    , microlens-th
    , parsec
    , servant
    , servant-lucid
    , servant-server
    , text
    , transformers
    , turtle
    , vector
    , vty
    , vty-unix
    , wai
    , warp

executable fundeps
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: fundeps
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , fundeps
    , turtle

executable fundeps-hs
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: fundeps-hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  fundeps

test-suite fundeps-test
  import:         common-options
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:  TUI.CommandsSpec
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , fundeps
    , graphviz
    , hspec
